<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        cls="com.hy.app.ui.camera.ScanActivity"
        android:title="@string/camera_scan" />
    <item
        cls="com.hy.app.ui.camera.QrcodeBuilderActivity"
        android:title="@string/camera_qrcode_builder" />
    <item
        cls="com.hy.app.ui.camera.PictureActivity"
        android:title="@string/camera_picture" />
    <item
        args='[{"key":"arg_max_size","value":"1","type":"Int"}]'
        cls="com.hy.app.ui.camera.MultPickActivity"
        android:title="@string/camera_picture_single" />
    <item
        args='[{"key":"arg_max_size","value":"9","type":"Int"}]'
        cls="com.hy.app.ui.camera.MultPickActivity"
        android:title="@string/camera_picture_more" />

</menu>