<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/camera_qrcode_builder_imgQrcode"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="?attr/appThemeColor"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/padding_normal"
        android:src="@color/white" />

    <EditText
        android:id="@+id/camera_qrcode_builder_editContent"
        style="@style/editStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/camera_qrcode_builder_imgQrcode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_normal"
        android:background="@drawable/edit_selector"
        android:hint="@string/camera_qrcode_builder_hint" />

    <Button
        android:id="@+id/camera_qrcode_builder_btnQrcode"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/camera_qrcode_builder_editContent"
        android:layout_alignBottom="@+id/camera_qrcode_builder_editContent"
        android:layout_alignEnd="@+id/camera_qrcode_builder_editContent"
        android:layout_alignRight="@+id/camera_qrcode_builder_editContent"
        android:background="@drawable/btn_selector"
        android:text="@string/camera_qrcode"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/camera_qrcode_builder_btnBarcode"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/camera_qrcode_builder_editContent"
        android:layout_alignBottom="@+id/camera_qrcode_builder_editContent"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_toLeftOf="@+id/camera_qrcode_builder_btnQrcode"
        android:layout_toStartOf="@+id/camera_qrcode_builder_btnQrcode"
        android:background="@drawable/btn_selector"
        android:text="@string/camera_barcode"
        android:textColor="@color/white" />
</RelativeLayout>